# textutils-Group9

./: README.md  environment.yml  environmentMAC.yml  pyproject.toml
src/textutils/: core.py  unique_words.py
tests/integration/: test_end_to_end.py
tests/unit/: test_core.py
