[project]
name = "textutils"
version = "0.1.0"
description = "Small collaborative text utilities package"
authors = [
  { name = "Group 9" }
]
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
addopts = "-q --cov=textutils --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["textutils"]
